Refactor 'build_vocabulary'

--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -8,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -471,22 +470,18 @@
    },
    "outputs": [],
    "source": [
-    "def vocabulary_to_index(vocabulary):\n",
-    "    feature2index = Counter()\n",
-    "    for i, feature in enumerate(vocabulary):\n",
-    "        feature2index[feature] = i\n",
-    "    return feature2index\n",
-    "\n",
     "def build_vocabulary(reviews, cutoff):\n",
     "    counter = Counter()\n",
     "    for content in reviews:\n",
     "        for feature in extract_features(content):\n",
     "            counter[feature] += 1\n",
-    "    vocabulary = {}\n",
+    "    vocabulary = []\n",
+    "    feature2index = Counter()\n",
     "    for f in counter.keys():\n",
     "        if counter[f] > cutoff:\n",
-    "            vocabulary[f] = 1\n",
-    "    return (vocabulary.keys(), vocabulary_to_index(vocabulary.keys()))"
+    "            vocabulary.append(f)\n",
+    "            feature2index[f] = len(vocabulary) - 1\n",
+    "    return (vocabulary, feature2index)"
    ]
   },
   {
@@ -611,123 +606,123 @@
      "text": [
       "Fold 1/5\n",
       "Epoch 1/10\n",
-      "8528/8528 [==============================] - 1s - loss: 0.6576 - acc: 0.6038     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.6570 - acc: 0.6136     \n",
       "Epoch 2/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.5416 - acc: 0.7417     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.5514 - acc: 0.7462     \n",
       "Epoch 3/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.4700 - acc: 0.7859     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.4781 - acc: 0.7913     \n",
       "Epoch 4/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.4216 - acc: 0.8153     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.4276 - acc: 0.8168     \n",
       "Epoch 5/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3892 - acc: 0.8324     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3879 - acc: 0.8340     \n",
       "Epoch 6/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3626 - acc: 0.8521     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3576 - acc: 0.8494     \n",
       "Epoch 7/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3376 - acc: 0.8601     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3286 - acc: 0.8644     \n",
       "Epoch 8/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.3144 - acc: 0.8725     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.3015 - acc: 0.8790     \n",
       "Epoch 9/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.2915 - acc: 0.8857     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.2770 - acc: 0.8891     \n",
       "Epoch 10/10\n",
-      "8528/8528 [==============================] - 0s - loss: 0.2727 - acc: 0.8918     \n",
+      "8528/8528 [==============================] - 0s - loss: 0.2556 - acc: 0.8985     \n",
       "Evaluating:\n",
-      "1792/2134 [========================>.....] - ETA: 0s - loss: 0.5909853301656056 - acc: 0.7389878165308515\n",
+      "1600/2134 [=====================>........] - ETA: 0s - loss: 0.6573731008822826 - acc: 0.7141518276097513\n",
       "******************************************************************\n",
       "Fold 2/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 1s - loss: 0.6839 - acc: 0.5885     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.6663 - acc: 0.6040     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5668 - acc: 0.7381     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5672 - acc: 0.7340     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4853 - acc: 0.7845     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4877 - acc: 0.7821     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4332 - acc: 0.8115     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4349 - acc: 0.8095     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3935 - acc: 0.8321     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3961 - acc: 0.8245     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3581 - acc: 0.8478     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3629 - acc: 0.8426     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3267 - acc: 0.8634     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3269 - acc: 0.8626     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2952 - acc: 0.8805     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2954 - acc: 0.8785     \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2659 - acc: 0.8979     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2627 - acc: 0.8986     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2381 - acc: 0.9132     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2331 - acc: 0.9154     \n",
       "Evaluating:\n",
-      "1600/2132 [=====================>........] - ETA: 0s - loss: 0.640493330320319 - acc: 0.7209193245778611\n",
+      "1952/2132 [==========================>...] - ETA: 0s - loss: 0.614179367475617 - acc: 0.7401500936968018\n",
       "******************************************************************\n",
       "Fold 3/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 1s - loss: 0.6447 - acc: 0.6333     \n",
+      "8530/8530 [==============================] - 1s - loss: 0.6684 - acc: 0.6057     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5392 - acc: 0.7538     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5616 - acc: 0.7343     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4782 - acc: 0.7868     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4845 - acc: 0.7860     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4347 - acc: 0.8081     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4316 - acc: 0.8116     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4032 - acc: 0.8246     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3945 - acc: 0.8284     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3738 - acc: 0.8380     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3644 - acc: 0.8414     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3443 - acc: 0.8539     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3373 - acc: 0.8572     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3175 - acc: 0.8660     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3139 - acc: 0.8720     \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2886 - acc: 0.8829     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2891 - acc: 0.8816     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2643 - acc: 0.8939     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2652 - acc: 0.9000     \n",
       "Evaluating:\n",
-      "1888/2132 [=========================>....] - ETA: 0s - loss: 0.5946929517427484 - acc: 0.7349906192487892\n",
+      "1600/2132 [=====================>........] - ETA: 0s - loss: 0.5968277338074475 - acc: 0.7321763601133121\n",
       "******************************************************************\n",
       "Fold 4/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 1s - loss: 0.6488 - acc: 0.6335     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.6674 - acc: 0.5992     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5483 - acc: 0.7479     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5549 - acc: 0.7394     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4815 - acc: 0.7855     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4757 - acc: 0.7844     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4352 - acc: 0.8096     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4270 - acc: 0.8138     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3963 - acc: 0.8302     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3920 - acc: 0.8273     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3639 - acc: 0.8438     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3611 - acc: 0.8450     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3310 - acc: 0.8599     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3344 - acc: 0.8596     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3007 - acc: 0.8749     - ETA: 0s - loss: 0.2877 \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3073 - acc: 0.8726     \n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2713 - acc: 0.8925     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2846 - acc: 0.8858     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2446 - acc: 0.9070     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2623 - acc: 0.8973     \n",
       "Evaluating:\n",
-      "1856/2132 [=========================>....] - ETA: 0s - loss: 0.6233098613164662 - acc: 0.7190431520818098\n",
+      "1824/2132 [========================>.....] - ETA: 0s - loss: 0.6212490430245032 - acc: 0.733114446584995\n",
       "******************************************************************\n",
       "Fold 5/5\n",
       "Epoch 1/10\n",
-      "8530/8530 [==============================] - 1s - loss: 0.6552 - acc: 0.6134     \n",
+      "8530/8530 [==============================] - 1s - loss: 0.6659 - acc: 0.6076     \n",
       "Epoch 2/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.5410 - acc: 0.7475     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.5511 - acc: 0.7424     \n",
       "Epoch 3/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4661 - acc: 0.7923     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4762 - acc: 0.7870     \n",
       "Epoch 4/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.4183 - acc: 0.8134     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.4275 - acc: 0.8108     \n",
       "Epoch 5/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3839 - acc: 0.8285     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3910 - acc: 0.8273     \n",
       "Epoch 6/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3531 - acc: 0.8461     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3593 - acc: 0.8441     \n",
       "Epoch 7/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.3251 - acc: 0.8583     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.3297 - acc: 0.8601     \n",
       "Epoch 8/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2956 - acc: 0.8760     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2966 - acc: 0.8771     - ETA: 0s - loss: 0.3033 - acc\n",
       "Epoch 9/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2714 - acc: 0.8875     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2701 - acc: 0.8959     \n",
       "Epoch 10/10\n",
-      "8530/8530 [==============================] - 0s - loss: 0.2456 - acc: 0.9047     \n",
+      "8530/8530 [==============================] - 0s - loss: 0.2445 - acc: 0.9077     \n",
       "Evaluating:\n",
-      "1824/2132 [========================>.....] - ETA: 0s - loss: 0.6207796188724869 - acc: 0.7284240151212095\n",
+      "1632/2132 [=====================>........] - ETA: 0s - loss: 0.6130071632969446 - acc: 0.7317073169613422\n",
       "******************************************************************\n"
      ]
     }
@@ -775,7 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média 0.7284729855121042 +/- 0.007733345602133371\n"
+      "Acurácia média 0.7302600089932405 +/- 0.008616289211280678\n"
      ]
     }
    ],
